modules/aws/ecs/service/main.tf
# ============
# ECS Services
# ============

# ECS Services based on above task definitions
resource "aws_ecs_service" "this" {
  name            = var.name
  cluster         = var.ecs_cluster_id
  task_definition = aws_ecs_task_definition.this.arn
  desired_count   = var.desired_count

  network_configuration {
    subnets          = var.subnet_ids
    security_groups  = [aws_security_group.this.id]
    assign_public_ip = false
  }

  # Only add capacity provider if provided
  dynamic "capacity_provider_strategy" {
    for_each = var.capacity_provider_name != null ? [var.capacity_provider_name] : []
    content {
      capacity_provider = capacity_provider_strategy.value
      weight            = 1
      base              = 1
    }
  }

  # Attach load balancer 
  load_balancer {
    container_name   = var.task.name
    target_group_arn = var.load_balancer_config.target_group_arn
    container_port   = var.load_balancer_config.container_port
  }

  # Distributes tasks evenly across EC2 instances
  ordered_placement_strategy {
    type  = "spread"
    field = "instanceId"
  }

  tags = {
    Name = "${var.name}-service"
  }
}

# ====================
# ECS Task Definitions
# ====================

# ECS Task Definitions for all tasks provided via `var.tasks`
resource "aws_ecs_task_definition" "this" {
  family       = var.task.name
  cpu          = var.task.cpu
  memory       = var.task.memory
  network_mode = "awsvpc"

  execution_role_arn = aws_iam_role.ecs_task_execution_role.arn
  task_role_arn      = try(var.task.task_role_arn, null)

  container_definitions = jsonencode([
    {
      name         = var.task.name
      image        = var.task.image_uri
      essential    = var.task.essential
      environment  = try(var.task.environment, [])
      portMappings = try(var.task.portMappings, [])
      command      = var.task.command
    }
  ])

  tags = {
    Name = var.task.name
  }
}

# ==========================
# Auto Scaling (ECS Service)
# ==========================

# Register ECS Service as scalable
resource "aws_appautoscaling_target" "ecs_service" {
  max_capacity       = 10
  min_capacity       = 1
  resource_id        = "service/${var.ecs_cluster_name}/${aws_ecs_service.this.name}"
  scalable_dimension = "ecs:service:DesiredCount"
  service_namespace  = "ecs"
}

# CPU-based auto-scaling policy
resource "aws_appautoscaling_policy" "cpu_scaling" {
  name               = "${aws_ecs_service.this.name}-cpu-scaling"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs_service.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs_service.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs_service.service_namespace

  target_tracking_scaling_policy_configuration {
    target_value = 70.0
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageCPUUtilization"
    }
    scale_in_cooldown  = 60
    scale_out_cooldown = 60
  }
}

# Memory-based auto-scaling policy
resource "aws_appautoscaling_policy" "memory_scaling" {
  name               = "${aws_ecs_service.this.name}-memory-scaling"
  policy_type        = "TargetTrackingScaling"
  resource_id        = aws_appautoscaling_target.ecs_service.resource_id
  scalable_dimension = aws_appautoscaling_target.ecs_service.scalable_dimension
  service_namespace  = aws_appautoscaling_target.ecs_service.service_namespace

  target_tracking_scaling_policy_configuration {
    target_value = 70.0
    predefined_metric_specification {
      predefined_metric_type = "ECSServiceAverageMemoryUtilization"
    }
    scale_in_cooldown  = 60
    scale_out_cooldown = 60
  }
}

# ============================
# Security Group (ECS Service)
# ============================

resource "aws_security_group" "this" {
  name        = "${var.task.name}-sg"
  description = "tasks Security group"
  vpc_id      = var.vpc_id

  tags = {
    Name = "${var.task.name}-sg"
  }
}

# Allow inbound from load balancer SGs
resource "aws_security_group_rule" "loadbalancer_sg_access" {
  count = length(var.load_balancer_config) > 0 ? 1 : 0

  description              = "Allow LoadBalancer traffic"
  type                     = "ingress"
  from_port                = var.load_balancer_config.container_port
  to_port                  = var.load_balancer_config.container_port
  protocol                 = "tcp"
  source_security_group_id = var.load_balancer_config.sg_id
  security_group_id        = aws_security_group.this.id
}

# Conditional Ingress: HTTP
resource "aws_security_group_rule" "public_http" {
  count = var.enable_public_http == true ? 1 : 0

  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow HTTP"
  security_group_id = aws_security_group.this.id
}

# Conditional Ingress: HTTPS
resource "aws_security_group_rule" "public_https" {
  count = var.enable_public_https == true ? 1 : 0

  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow HTTPS"
  security_group_id = aws_security_group.this.id
}

# Egress rule: Allow all outbound traffic
resource "aws_security_group_rule" "egress" {
  description       = "Allow all outbound traffic"
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

# ====================
# IAM Roles & Policies
# ====================

# IAM role trust policy for ECS container instances
data "aws_iam_policy_document" "ecs_assume_role" {
  statement {
    effect = "Allow"

    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }

    actions = ["sts:AssumeRole"]
  }
}

# AWS managed policy for ECS service role
data "aws_iam_policy" "ecs_service_role_policy" {
  name = "AmazonEC2ContainerServiceRole"
}

# IAM role trust policy for ECS task execution role
data "aws_iam_policy_document" "ecs_task_execution_role" {
  statement {
    effect = "Allow"

    principals {
      type        = "Service"
      identifiers = ["ecs-tasks.amazonaws.com"]
    }

    actions = ["sts:AssumeRole"]
  }
}

# AWS managed policy for ECS task execution role
data "aws_iam_policy" "ecs_task_execution_role_policy" {
  name = "AmazonECSTaskExecutionRolePolicy"
}

# ECS Task Execution IAM Role
resource "aws_iam_role" "ecs_task_execution_role" {
  name               = "${local.name}-task-execution-role"
  assume_role_policy = data.aws_iam_policy_document.ecs_task_execution_role.json

  tags = {
    Name = "${local.name}-task-execution-role"
  }
}

# Attach managed execution policy to role
resource "aws_iam_role_policy_attachment" "task_execution_policy_attach" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = data.aws_iam_policy.ecs_task_execution_role_policy.arn
}
